[gd_scene load_steps=13 format=2]

[ext_resource path="res://GUI.gd" type="Script" id=1]
[ext_resource path="res://fonts/Lobster-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/emoji/wow.png" type="Texture" id=3]
[ext_resource path="res://fonts/Arimo-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://escenas/Transicion.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 34
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 4 )

[node name="Creditos" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Bgcolor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.760784, 0.882353, 1 )

[node name="H1" type="HBoxContainer" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -175.0
margin_top = 50.0
margin_right = 207.0
margin_bottom = 150.0
custom_constants/separation = 16
alignment = 1

[node name="H1" type="Label" parent="H1"]
margin_left = 65.0
margin_right = 316.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.137255, 0.266667, 0.290196, 1 )
text = "Creditos"
align = 1
valign = 1

[node name="Emoji" type="Sprite" parent="H1"]
position = Vector2( 15, 50 )
texture = ExtResource( 3 )

[node name="Contenido" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -741.0
margin_top = -87.0
margin_right = -91.0
margin_bottom = 350.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0745098, 0.415686, 0.478431, 1 )
text = "- Personaje que camina con animaciones.
- Teletransportación de Goku (Base en tiles).
- Sonidos según una acción.
- Proyectiles con explosión en la colisión.
- Explosión con timer como bomberman.
- Barra de HUD con los controles del juego.
- Ciclo día y noche en el mapa.
- Sistema de guardado y cargado.
- Habilidad de vuelo.
- GUI responsivo.
- FullScreen."
valign = 1

[node name="Base" type="VBoxContainer" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -520.0
margin_top = -200.0
margin_right = 494.0
margin_bottom = -89.0
custom_constants/separation = 16
alignment = 1

[node name="Descripcion" type="Label" parent="Base"]
margin_top = 14.0
margin_right = 1014.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0745098, 0.415686, 0.478431, 1 )
text = "Aquí está la gran cantidad de gente que hizo todo esto, jajaja.
Gracias Cato, por siempre apoyarme. ¡Vamos con               !"
align = 1
valign = 1

[node name="Saphirus" type="LinkButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 307.0
margin_top = -143.0
margin_right = 444.0
margin_bottom = -103.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.0745098, 0.415686, 0.478431, 1 )
custom_colors/font_color_hover = Color( 0.121569, 0.54902, 0.627451, 1 )
custom_colors/font_color_pressed = Color( 0.65098, 0.882353, 0.92549, 1 )
text = "Sáphirus"

[node name="Art&Sound" type="VBoxContainer" parent="."]
editor/display_folded = true
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 120.0
margin_top = -71.0
margin_right = 504.0
margin_bottom = 167.0
custom_constants/separation = 16
alignment = 1

[node name="Pixel_Art" type="Label" parent="Art&Sound"]
margin_top = 15.0
margin_right = 392.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.137255, 0.266667, 0.290196, 1 )
text = "Gráficos y Sonidos"
align = 1
valign = 1

[node name="Pixel_Art_People" type="Label" parent="Art&Sound"]
margin_top = 74.0
margin_right = 392.0
margin_bottom = 223.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.0745098, 0.415686, 0.478431, 1 )
text = "Jo-Sword (No hago sonidos).
Falacy (Heroes United 2).
Crazah (Naruto Evolution).
Emojis Free."
valign = 1

[node name="Coder" type="HBoxContainer" parent="."]
editor/display_folded = true
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 120.0
margin_top = 190.0
margin_right = 470.0
margin_bottom = 240.0
custom_constants/separation = 16

[node name="Programación" type="Label" parent="Coder"]
margin_top = 3.0
margin_right = 202.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.137255, 0.266667, 0.290196, 1 )
text = "Programación:"
align = 2
valign = 1

[node name="Code_People" type="Label" parent="Coder"]
margin_left = 218.0
margin_top = 7.0
margin_right = 354.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.0745098, 0.415686, 0.478431, 1 )
text = "Jo-Sword."
align = 1
valign = 1

[node name="Deployer" type="HBoxContainer" parent="."]
editor/display_folded = true
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 120.0
margin_top = 240.0
margin_right = 470.0
margin_bottom = 290.0
custom_constants/separation = 16

[node name="Exportación" type="Label" parent="Deployer"]
margin_top = 3.0
margin_right = 168.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.137255, 0.266667, 0.290196, 1 )
text = "Exportación:"
align = 2
valign = 1

[node name="Exp_People" type="Label" parent="Deployer"]
margin_left = 184.0
margin_top = 7.0
margin_right = 320.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.0745098, 0.415686, 0.478431, 1 )
text = "Catoflight."
align = 1
valign = 1

[node name="Side_Left" type="HBoxContainer" parent="."]
editor/display_folded = true
anchor_bottom = 1.0
margin_right = 79.0
custom_constants/separation = 64

[node name="Regresar" type="Button" parent="Side_Left"]
margin_right = 79.0
margin_bottom = 720.0
custom_fonts/font = SubResource( 7 )
text = "Back"

[node name="Transicion" parent="." instance=ExtResource( 5 )]
margin_left = 1.79272
margin_top = 0.0
margin_right = 1.79272
margin_bottom = 0.0
[connection signal="button_down" from="Saphirus" to="." method="_on_Saphirus_button_down"]
[connection signal="button_up" from="Side_Left/Regresar" to="." method="_on_Regresar_button_up"]
