[gd_scene load_steps=15 format=2]

[ext_resource path="res://GUI.gd" type="Script" id=1]
[ext_resource path="res://fonts/Lobster-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/Arimo-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/emoji/lover.png" type="Texture" id=4]
[ext_resource path="res://escenas/Transicion.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://fonts/Arimo-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://fonts/Arimo-Regular.ttf"

[sub_resource type="DynamicFont" id=9]
size = 15
font_data = SubResource( 8 )

[node name="Main" type="Node"]

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Bgcolor" type="ColorRect" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.760784, 0.882353, 1 )

[node name="Texto_Principal" type="Label" parent="GUI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -199.0
margin_top = 147.0
margin_right = 201.0
margin_bottom = 222.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.137255, 0.266667, 0.290196, 1 )
text = "Prueba #1"
align = 1
valign = 1

[node name="Descripcion" type="Label" parent="GUI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -640.0
margin_top = 279.0
margin_right = 640.0
margin_bottom = 323.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0745098, 0.415686, 0.478431, 1 )
text = "La leyenda del test sagrado
y los chicos prueba. XD"
align = 1
valign = 1

[node name="Botones" type="HBoxContainer" parent="GUI"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = 93.0
margin_right = 640.0
margin_bottom = 166.0
custom_constants/separation = 64
alignment = 1

[node name="Start" type="Button" parent="GUI/Botones"]
margin_left = 313.0
margin_right = 514.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 3 )
text = "Crear Partida"

[node name="Load" type="Button" parent="GUI/Botones"]
margin_left = 569.0
margin_right = 786.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 3 )
text = "Cargar Partida"

[node name="Credits" type="Button" parent="GUI/Botones"]
margin_left = 842.0
margin_right = 975.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 3 )
text = "Creditos"

[node name="Footer" type="HBoxContainer" parent="GUI"]
editor/display_folded = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -210.0
margin_top = -30.0
margin_right = -5.0
margin_bottom = -2.0
custom_constants/separation = 64
alignment = 2

[node name="Footer_Text" type="Label" parent="GUI/Footer"]
margin_left = 6.0
margin_right = 205.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.137255, 0.266667, 0.290196, 1 )
text = "Un juego de: Jo-Sword"
align = 2
valign = 1

[node name="Emoji" type="Sprite" parent="GUI/Footer"]
position = Vector2( 140, -45 )
texture = ExtResource( 4 )

[node name="Create_ACC" type="ColorRect" parent="GUI"]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -371.0
margin_top = 45.0
margin_right = 356.0
margin_bottom = 195.0
color = Color( 0.129412, 0.760784, 0.882353, 1 )

[node name="Start2" type="Button" parent="GUI/Create_ACC"]
margin_left = 542.768
margin_top = 34.9158
margin_right = 675.768
margin_bottom = 100.916
custom_fonts/font = SubResource( 3 )
text = "Listo"

[node name="Typename" type="TextEdit" parent="GUI/Create_ACC"]
margin_left = 324.0
margin_top = 47.0
margin_right = 546.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 6 )
text = "Kareta"
breakpoint_gutter = true
context_menu_enabled = false

[node name="Text_Type" type="Label" parent="GUI/Create_ACC"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 27.324
margin_top = -111.285
margin_right = -416.676
margin_bottom = -61.2847
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.137255, 0.266667, 0.290196, 1 )
text = "Escribe tu nombre:"
align = 2
valign = 1

[node name="FullScreen" type="CheckBox" parent="GUI"]
margin_top = 1.0
margin_right = 114.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 9 )
text = "FullScreen"

[node name="Transicion" parent="." instance=ExtResource( 5 )]
visible = true
margin_top = -2.19031
margin_bottom = -2.19031
[connection signal="button_up" from="GUI/Botones/Start" to="GUI" method="_on_Start_button_up"]
[connection signal="button_up" from="GUI/Botones/Load" to="GUI" method="_on_Load_button_up"]
[connection signal="button_up" from="GUI/Botones/Credits" to="GUI" method="_on_Credits_button_up"]
[connection signal="button_up" from="GUI/Create_ACC/Start2" to="GUI" method="_on_Start2_button_up"]
[connection signal="button_down" from="GUI/FullScreen" to="GUI" method="_on_FullScreen_button_down"]
